...
                onSaved: (newValue) {
                  item1 = newValue == "" ? "Item 1" : newValue;
                },
              ),
              const SizedBox(height: 8),
              TextFormField(
                key: const Key("TextFieldKey2"),
                decoration: const InputDecoration(
                  border: OutlineInputBorder(),
                  labelText: "Item 2",
                ),
                onSaved: (newValue) {
                  item2 = newValue == "" ? "Item 2" : newValue;
...
